Added more things to the About Page. It still needs to be styled a little. The pictures are still not appearing for the slider and parallax pictures.

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -6,60 +6,50 @@
 
 <head>
     <title>About</title>
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device=width,initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="aboutpagemain.css")/>
 
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device=width,initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="aboutpagemain.css")/>
 
     </head>
 
-    <body>
+    <body class="teal lighten-1">
         
-<!--
-        <p id="demo"></p>
-        <script>
-            var d = new Date();
-            document.getElementById("demo").innerHTML = d.tostring();
-        </script>
-        <button class="waves-effect waves-light btn" type="button" onclick="document.getElementById('demo').innerHTML=Date()">
-Click on me to display Date and Time</button><br><br>
--->
-
-  
 <div class="slider">
 <ul class="slides">
 
 <li>
-<img src="images/WWBlogo.jpg">         <!--Change the picture-->
+
+<img class="www-logo responsive-img" src="images/base_transparent.png"></img>       <!--A envelope/letter picture-->
+
 <div class="caption center-align">
-<h3>This is our big timeline!</h3>
-<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+<h3>Who even write letters still?</h3>
+<h5 class="light grey-text text-lighten-3">It takes a long time to send letters.</h5>
 </div>
 </li>
 
 <li>
-<img src="images/WWBlogo.jpg">       <!--Change the picture-->
+<img class="www-logo responsive-img" src="images/base_transparent.png"></img>    <!--A picture of an email-->
 <div class="caption center-align">   
 <div class="caption center-align">
-<h3>This is our big timeline!</h3>     <!--Change this-->
-<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>    <!--Change this-->
+<h3>Emails are not fun.</h3>     
+<h5 class="light grey-text text-lighten-3">Young people now prefer instant messaging.</h5>   
 </div>
 </li>
 
 <li>
-<img src="images/WWBlogo.jpg">        <!--Change the picture-->
+<img class="www-logo responsive-img" src="images/base_transparent.png"></img>       <!--Picture of World Without Borders Landing Page-->
 <div class="caption center-align">   
 <div class="caption center-align">
-<h3>This is our big timeline!</h3>     <!--Change this-->
-<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>   <!--Change this-->
+<h3>It is fun to do and is interactive.</h3>    
+<h5 class="light grey-text text-lighten-3">Quicker and more efficent.</h5>   
 </div>
 </li>
 
@@ -68,7 +58,7 @@ Click on me to display Date and Time</button><br><br>
 <h4><center>About</center></h4>
 
 <div class="parallax-container">
-<div class="parallax"><img src="images/WWBlogo.jpg"></div>  <!--Change the picture-->
+<div class="parallax"><img class="www-logo responsive-img" src="images/base_transparent.png"></img></div>  <!--Change the picture-->
 </div>
 
 <div class="container">
@@ -80,27 +70,23 @@ Click on me to display Date and Time</button><br><br>
         </div><br><br>
 
 <div class="parallax-container">
-<div class="parallax"><img src="images/WWBlogo.jpg"></div>
+<div class="parallax"><img class="www-logo responsive-img" src="images/base_transparent.png"></img></div>
 </div>
         <h4><center>Frequently Asked Questions</center></h4><br>
 
-        <h5>Question 1</h5>
-        <h5>Question 1 Answer</h5><br>
+        <h5 class="flow-text">How do you notify your penpal to log on to World Without Borders website and start messaging you back?</h5>
+        <h5 class="flow-text">You can click the bell that is located next to the time stamp that is above your conversation panel. Then you will be able to send a email to your penpal to notify them to log on.</h5><br>
 
-        <h5>Question 2</h5>
-        <h5>Question 2 Answer</h5><br>
+        <h5 class="flow-text">What are the special characters used for?</h5>
+        <h5 class="flow-text">If your language needs a special character then you can pick and choose the special character you need. Under the special characters option you can even choose emojis to send also.</h5><br>
 
-        <h5>Question 3</h5>
-        <h5>Question 3 Answer</h5><br>
+        <h5 class="flow-text">How does the translating feature work?</h5>
+        <h5 class="flow-text">All you need to do is choose the input language you are starting with. Then choose what language you want your input language to be translated to.</h5><br>
 
-        <h5>Question 4</h5>
-        <h5>Question 4 Answer</h5><br>
+        <h5 class="flow-text">How can you send a picture to your penpal in your conversation?</h5>
+        <h5 class="flow-text">To send a picture you need to click on the picture button which is located to the right of the send button, Then you choose the picture you want to send to your penpal.</h5><br>
 
-        <h5>Question 5</h5>
-        <h5>Question 5 Answer</h5><br>
-
-
-
+        
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
@@ -117,6 +103,9 @@ Click on me to display Date and Time</button><br><br>
 </script>
 
 <!-- Compiled and minified CSS -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </body>
 </html>
