--- a/dashboard.html
+++ b/dashboard.html
@@ -322,7 +322,8 @@
         </div>
     </div>
 
-<!-- Frequently Asked Questions Modal -->
+<!--
+<!- Frequently Asked Questions Modal ->
 <div id="faq-modal" class="modal">
 <div class="modal-content">
 <h4>Frequently Asked Questions</h4>
@@ -332,7 +333,7 @@
 <button class="modal-action modal-close red lighten-1 btn waves-effect waves-light">
               </span>Close\</span>
             </button>
-            
+-->
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
