--- a/landingpage.html
+++ b/landingpage.html
@@ -40,8 +40,11 @@
 
 <body>
     <h1 id="title">World Without Borders</h1>
+    <h5>Penpals for the 21st Century</h5>
     <img class="www-logo responsive-img" src="images/base_transparent.png"></img>
     <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
+
+    <a class="center-align btn waves-light waves-effect red lighten-1" id="back-button" href="aboutpage.html">About and Frequently Asked Questions</a>
 
   <!--Firebase-->
   <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
