Try adding pictures to about page, but it did not work.

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -27,7 +27,7 @@
 
 <li>
 
-<img class="www-logo responsive-img" src="images/base_transparent.png"></img>       <!--A envelope/letter picture-->
+<img  src="images/envelope.jpg"></img>       <!--A envelope/letter picture-->
 
 <div class="caption center-align">
 <h3>Who even write letters still?</h3>
@@ -36,7 +36,7 @@
 </li>
 
 <li>
-<img class="www-logo responsive-img" src="images/base_transparent.png"></img>    <!--A picture of an email-->
+<img src="email.gif"></img>    <!--A picture of an email-->
 <div class="caption center-align">   
 <div class="caption center-align">
 <h3>Emails are not fun.</h3>     
