Styled the educator suite

--- a/educator/educator-dashboard.html
+++ b/educator/educator-dashboard.html
@@ -2,47 +2,47 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <span class="notranslate"><title>World Without Borders</title></span>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <span class="notranslate"><title>World Without Borders</title></span>
 
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
 
-  <!-- Web Application Manifest -->
-  <link rel="manifest" href="manifest.json">
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="World Without Borders">
-  <meta name="theme-color" content="#303F9F">
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="manifest.json">
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="World Without Borders">
+    <meta name="theme-color" content="#303F9F">
 
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="World Without Borders">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="World Without Borders">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
 
-  <!-- Tile icon for Win8 -->
-  <meta name="msapplication-TileColor" content="#3372DF">
-  <meta name="msapplication-navbutton-color" content="#303F9F">
+    <!-- Tile icon for Win8 -->
+    <meta name="msapplication-TileColor" content="#3372DF">
+    <meta name="msapplication-navbutton-color" content="#303F9F">
 
-  <!-- Compiled and minified CSS -->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="educator-dashboard.css">
+    <!-- Compiled and minified CSS -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="educator-dashboard.css">
 
 </head>
 
-<body hidden>
+<body hidden class="teal">
     <!-- <h1 id="title">World Without Borders</h1>
     <img class="www-logo responsive-img" src="images/base_recolored_360.png"></img>
     <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a> -->
-<span class="notranslate">
+    <span class="notranslate">
   <ul id="user-dropdown" class="dropdown-content">
       <li>
           <a id="sign-out">Sign-out</a>
@@ -71,59 +71,58 @@
       </div>
     </nav>
     <h1 id="school-name"></h1>
-    <h3>Your Code: <span id="school-code"></span></h3>
+    <h3>Your School Code: <span id="school-code"></span></h3>
 
     <!-- <a id="add-school-btn" class="waves-effect waves-light btn">Add Associate School</a> -->
     <!-- Add School Button -->
-    <a class="waves-effect waves-light btn modal-trigger" href="#add-school-modal">Add Associate School</a>
+    <a class="waves-effect waves-light btn red lighten-1 modal-trigger" id="add-school-btn" href="#add-school-modal">Add an Associate School</a>
 
     <div id="users-container">
     </div>
 
     <!-- Modal Structure -->
     <div id="add-school-modal" class="modal">
-      <div class="modal-content">
-        <h4>Add Associate Schools</h4>
-        <p>Adding other schools allows your students to more easily get in touch.</p>
-        <div class="row">
-          <form class="col s12" id="add-school-form">
+        <div class="modal-content">
+            <h4>Add Associate Schools</h4>
+            <p>Adding other schools allows your students to more easily get in touch.</p>
             <div class="row">
+                <form class="col s12" id="add-school-form">
+                    <div class="row">
 
-              <div class="input-field col s6">
-                <input name="school-code" type="text">
-                <label for="school-code">School Code</label>
-              </div>
+                        <div class="input-field col s6">
+                            <input name="school-code" type="text">
+                            <label for="school-code">School Code</label>
+                        </div>
+                    </div>
+                    <a id="add-btn" class="red lighten-1waves-effect waves-light btn col s6" disabled>Add</a>
+
+                </form>
             </div>
-
-            <a id="add-btn" class="waves-effect waves-light btn" disabled>Add</a>
-
-          </form>
+            <div class="progress" style="display:none;">
+                <div class="indeterminate"></div>
+            </div>
         </div>
-        <div class="progress" style="display:none;">
-            <div class="indeterminate"></div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Done</a>
         </div>
-      </div>
-      <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Done</a>
-      </div>
     </div>
-</span>
+    </span>
 
-<!--Firebase-->
-<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
-<script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
-        authDomain: "penpalapp-6020c.firebaseapp.com",
-        databaseURL: "https://penpalapp-6020c.firebaseio.com",
-        storageBucket: "penpalapp-6020c.appspot.com",
-        messagingSenderId: "322094641122"
-    };
-    firebase.initializeApp(config);
-</script>
-<script src='../scripts/command.js'></script>
-<script src="educator-dashboard.js"></script>
+    <!--Firebase-->
+    <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
+            authDomain: "penpalapp-6020c.firebaseapp.com",
+            databaseURL: "https://penpalapp-6020c.firebaseio.com",
+            storageBucket: "penpalapp-6020c.appspot.com",
+            messagingSenderId: "322094641122"
+        };
+        firebase.initializeApp(config);
+    </script>
+    <script src='../scripts/command.js'></script>
+    <script src="educator-dashboard.js"></script>
 </body>
 
 </html>
