--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
 
 </head>
 
-<body>
+<body class="teal">
     <div class="card" id="login-card">
         <div class="card-content">
             <span class="card-title center-align">Login</span>
