I have to commit this.

--- a/dashboard.html
+++ b/dashboard.html
@@ -134,7 +134,7 @@
             </div>
         </div>
 
-        <div id="chat-container" class="col s9 m7 l6 teal white-text">
+        <div id="chat-container" class="col s9 m7 l6 teal white-text" hidden>
             <center id="chat-title" hidden>
               <span class="display-name"></span>
               <span class="local-time"></span>
@@ -185,7 +185,7 @@
 
     </div>
 
-    <div id="tools-container" class="col s5 m5 l4 teal" style="margin-top: 5px;">
+    <div id="tools-container" class="col s5 m5 l4 teal" style="margin-top: 5px;" hidden>
         <center class="white-text">Tools</center>
         <!--<div id="chat" class="card z-depth-3">-->
         <ul id="translate-panel" class="collapsible card" data-collapsible="accordion">
@@ -364,7 +364,7 @@
 
     <script src="scripts/pages/dashboard.js"></script>
     <script>
-    console.log('hi');
+    // console.log('hi');
      </script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jstimezonedetect/1.0.4/jstz.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/moment.js'></script>
