Add a basic sign-out-button for large screen in educator-dashboard

--- a/educator/educator-dashboard.html
+++ b/educator/educator-dashboard.html
@@ -43,26 +43,28 @@
     <img class="www-logo responsive-img" src="images/base_recolored_360.png"></img>
     <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a> -->
     <span class="notranslate">
-  <ul id="user-dropdown" class="dropdown-content">
+  <!-- <ul id="user-dropdown" class="dropdown-content">
       <li>
           <a id="sign-out">Sign-out</a>
           <a href="account-info-sync.html?editProfile=true">Edit Profile</a>
           <a href="stat-summary.html">View Stat Summary</a>
       </li>
-  </ul>
-  <nav>
+  </ul> -->
+    <nav>
       <div class="nav-wrapper teal" id="nav-bar">
           <a href="#" class="brand-logo"><i class="large material-icons">textsms</i>World Without Borders</a>
-          <a href="#" data-activates="mobile-demo" class="button-collapse" id="button-collapse"><i class="material-icons">menu</i></a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
+
+          <a id="sign-out" class="right waves-effect waves-light btn red hide-on-med-and-down">Sign-out</a>
+
+          <!-- <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li>
-                  <!-- <a href="aboutpage.html">About</a> -->
-                  <a id="user-name" href='profile-page.html' hidden>Username</a>
+
               </li>
               <li>
                   <a class="dropdown-button" href="#!" data-activates="user-dropdown" id="user-pic" hidden></a>
               </li>
-          </ul>
+          </ul> -->
+          <a href="#" data-activates="mobile-demo" class="button-collapse" id="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="side-nav" id="mobile-demo">
               <li>
                   <a id="sign-out-mobile">Sign-out</a>
