Fix google translations on dashboard

--- a/landingpage.html
+++ b/landingpage.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <span class="notranslate"><title>World Without Borders Landing Page</title></span>
+  <span class="notranslate"><title>World Without Borders</title></span>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -40,7 +40,8 @@
 
 <body>
     <img class="www-logo responsive-img" src="images/base_transparent.png" width="200px", height="200px"></img>
-    <h2 id="title">World Without Borders</h1>
+    <h2 id="title">World Without Borders</h2>
+    <h5 id="slogan">Penpals for the 21st century.</h5>
     <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
 
   <!--Firebase-->
