Add school page link in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -73,13 +73,11 @@
             <a href="#" data-activates="mobile-demo" class="button-collapse" id="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li>
-                    <!-- <a href="aboutpage.html">About</a> -->
-
-
-
-
+                  <a href="school-page.html">My School</a>
+                </li>
+                <li>
                     <!-- <a id="user-name" href='profile-page.html' hidden>Username</a> -->
-                    <a id="user-name" href="profile-page.html" hidden>Username</a> <!--Made dead link while profile-page is under development-->
+                    <a id="user-name" href="stat-summary.html" hidden>Username</a> <!--Made dead link while profile-page is under development-->
 
 
                 </li>
