--- a/dashboard.html
+++ b/dashboard.html
@@ -269,7 +269,7 @@
     <div id="add-conversation" class="modal">
         <div class="modal-content">
             <h4 class="translate">Add a conversation.</h4>
-            <h5 class="translate">Don't know specific emails? Click <a href="school-page.html">here</a> to see your options based on your school.</h5>
+            <h5 class="translate">Don't know specific emails? Click <a href="school-page.html" style="color:red;">here</a> to see your options based on your school.</h5>
             <div class="input-field inline">
                 <input id="email-field" type="email" class="validate">
                 <label for="email-field" data-error="Email formatted incorrectly" data-success="" class="translate">Email Address</label>
