Made changes to the landing page.

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -18,12 +18,13 @@
     </head>
 
     <body class="teal lighten-1">
-        
+   
+   <!--     
 <div class="slider">
 <ul class="slides">
 
 <li>
-<img  src="images/envelope.jpg"></img>       <!--A envelope/letter picture-->
+<img  src="images/envelope.jpg"></img>       <!-A envelope/letter picture->
 
 <div class="caption center-align">
 <h3>Who even write letters still?</h3>
@@ -32,7 +33,7 @@
 </li>
 
 <li>
-<img src="email.gif"></img>    <!--A picture of an email-->
+<img src="email.gif"></img>    <!-A picture of an email->
 <div class="caption center-align">   
 <div class="caption center-align">
 <h3>Emails are not fun.</h3>     
@@ -41,7 +42,7 @@
 </li>
 
 <li>
-<img class="www-logo responsive-img" src="images/base_transparent.png"></img>       <!--Picture of World Without Borders Landing Page-->
+<img class="www-logo responsive-img" src="images/base_transparent.png"></img>       <!-Picture of World Without Borders Landing Page->
 <div class="caption center-align">   
 <div class="caption center-align">
 <h3>It is fun to do and is interactive.</h3>    
@@ -50,6 +51,8 @@
 </li>
 
 </div>
+
+-->
 
 <h4><center>About</center></h4>
 
