--- a/landingpage.html
+++ b/landingpage.html
@@ -39,10 +39,67 @@
 </head>
 
 <body>
+
     <h1 id="title">World Without Borders</h1>
     <h5>Penpals for the 21st Century</h5>
     <img class="www-logo responsive-img" src="images/base_transparent.png"></img>
-    <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
+    <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a><br><br>
+
+    <!-- This is where screen recording video goes-->
+
+<video class="responsive-video" controls>
+<source src="WWB Demo cut" type="video/mp4">
+</video>
+    
+
+<h4><center>About</center></h4>
+
+<div class="parallax-container">
+<div class="parallax"><img class="www-logo responsive-img" src="images/envelope.jpg"></img></div>  <!--Change the picture-->
+</div>
+
+<p class="flow-text">World Without Borders will be a service that upgrades the old pen pal concept with instant messaging that young people are used to today in the form of an online chat app. Especially in the case of foreign language education, this is fantastic because it allows students to improve their language skills while having fun by conversing with native speakers their age. Certain tools will also be implemented that make this type of communication easier such as the ability to translate just an individual word or phrase, grammar checks, and speech to text.</p>
+        </div><br><br>
+
+<div class="parallax-container">
+<div class="parallax"><img class="www-logo responsive-img" src="images/envelope.jpg"></img></div>
+</div>
+        <h4><center>Frequently Asked Questions</center></h4><br>
+
+        <h5 class="flow-text">How do you notify your penpal to log on to World Without Borders website and start messaging you back?</h5>
+        <h5 class="flow-text">You can click the bell that is located next to the time stamp that is above your conversation panel. Then you will be able to send a email to your penpal to notify them to log on.</h5><br>
+
+        <h5 class="flow-text">What are the special characters used for?</h5>
+        <h5 class="flow-text">If your language needs a special character then you can pick and choose the special character you need. Under the special characters option you can even choose emojis to send also.</h5><br>
+
+        <h5 class="flow-text">How does the translating feature work?</h5>
+        <h5 class="flow-text">All you need to do is choose the input language you are starting with. Then choose what language you want your input language to be translated to.</h5><br>
+
+        <h5 class="flow-text">How can you send a picture to your penpal in your conversation?</h5>
+        <h5 class="flow-text">To send a picture you need to click on the picture button which is located to the right of the send button, Then you choose the picture you want to send to your penpal.</h5><br>
+</div>
+        
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+
+<script>
+   $(document).ready(function)(){
+    $('slider').slider();
+   });
+
+    $(document).ready(function(){
+        $('.parallax').parallax();
+    });
+</script>
+
+<!-- Compiled and minified CSS -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
 
 
   <!--Firebase-->
