--- a/landingpage.html
+++ b/landingpage.html
@@ -42,7 +42,7 @@
     <img class="www-logo responsive-img" src="images/base_transparent.png" width="200px", height="200px"></img>
     <h2 id="title">World Without Borders</h2>
     <h5 id="slogan">Penpals for the 21st century.</h5>
-    <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
+    <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Sign In</a>
 
   <!--Firebase-->
   <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
