--- a/dashboard.html
+++ b/dashboard.html
@@ -46,7 +46,6 @@
 <body>
 
     <div id="google_translate_element"></div>
-
     <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
@@ -56,7 +55,6 @@
         }
 
     </script>
-
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <!-- Navbar  -->
@@ -69,7 +67,7 @@
     </ul>
     <nav>
         <div class="nav-wrapper teal" id="nav-bar">
-            <a href="#" class="brand-logo"><i class="large material-icons">textsms</i>World Without Borders</a>
+            <a href="#" class="brand-logo">World Without Borders<img style="margin-left:10px;"height="40px" width="40px" src="./images/base_transparent.png"></img></a>
             <a href="#" data-activates="mobile-demo" class="button-collapse" id="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li>
