--- a/login.html
+++ b/login.html
@@ -3,69 +3,83 @@
 <html lang="en">
 <!-- Materialize CSS Head -->
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Without Borders</title>
-    <link rel="stylesheet" type="text/css" href="styles/login.css">
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>World Without Borders</title>
+      <link rel="stylesheet" type="text/css" href="styles/login.css">
 
 
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
+      <!-- Disable tap highlight on IE -->
+      <meta name="msapplication-tap-highlight" content="no">
 
-    <!-- Web Application Manifest -->
-    <link rel="manifest" href="manifest.json">
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="World Without Borders">
-    <meta name="theme-color" content="#303F9F">
+      <!-- Web Application Manifest -->
+      <link rel="manifest" href="manifest.json">
+      <!-- Add to homescreen for Chrome on Android -->
+      <meta name="mobile-web-app-capable" content="yes">
+      <meta name="application-name" content="World Without Borders">
+      <meta name="theme-color" content="#303F9F">
 
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="World Without Borders">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
+      <!-- Add to homescreen for Safari on iOS -->
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+      <meta name="apple-mobile-web-app-title" content="World Without Borders">
+      <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
 
-    <!-- Tile icon for Win8 -->
-    <meta name="msapplication-TileColor" content="#3372DF">
-    <meta name="msapplication-navbutton-color" content="#303F9F">
+      <!-- Tile icon for Win8 -->
+      <meta name="msapplication-TileColor" content="#3372DF">
+      <meta name="msapplication-navbutton-color" content="#303F9F">
 
-    <!-- Compiled and minified CSS -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+      <!-- Compiled and minified CSS -->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
-</head>
+  </head>
 
-<body class="teal">
-    <div class="card" id="login-card">
-        <div class="card-content">
-            <span class="card-title center-align">Login</span>
-            <a id="sign-in" class="waves-effect waves-light btn"><i class="material-icons left">account_circle</i>Login with Google</a>
-        </div>
-    </div>
+  <body class="teal">
 
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
-    authDomain: "penpalapp-6020c.firebaseapp.com",
-    databaseURL: "https://penpalapp-6020c.firebaseio.com",
-    storageBucket: "penpalapp-6020c.appspot.com",
-    messagingSenderId: "322094641122"
-  };
-  firebase.initializeApp(config);
-</script>
-<script src="scripts/pages/login.js"></script>
-<script src="scripts/bind-signin-button.js" buttonID='sign-in'></script>
+    <div id="google_translate_element"></div>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            }, 'google_translate_element');
+        }
 
-</body>
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+
+      <div class="card" id="login-card">
+          <div class="card-content">
+              <span class="card-title center-align">Sign In</span>
+              <a id="sign-in" class="waves-effect waves-light btn"><i class="material-icons left">account_circle</i>Sign in with Google</a>
+          </div>
+      </div>
+
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
+        authDomain: "penpalapp-6020c.firebaseapp.com",
+        databaseURL: "https://penpalapp-6020c.firebaseio.com",
+        storageBucket: "penpalapp-6020c.appspot.com",
+        messagingSenderId: "322094641122"
+      };
+      firebase.initializeApp(config);
+    </script>
+    <script src="scripts/pages/login.js"></script>
+    <script src="scripts/bind-signin-button.js" buttonID='sign-in'></script>
+
+    </body>
 
 </html>
