major major MAJOR bug fix.

--- a/dashboard.html
+++ b/dashboard.html
@@ -272,6 +272,9 @@
                 <input id="email-field" type="email" class="validate">
                 <label for="email-field" data-error="Email formatted incorrectly" data-success="" class="translate">Email Address</label>
             </div>
+            <div class="progress">
+              <div class="indeterminate"></div>
+            </div>
             <button id="add-conversation-button" class="translate red lighten-1 btn waves-effect waves-light">Add Conversation</button>
         </div>
         <div class="modal-footer">
